Annotator almost ready

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
             margin:0;
             padding:0;
             height: 100vh;
-            background-color: #c1cadb;
+            background-color: #37455f;
         }
         .divLoader {
             text-align: center;
